--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,10 +4,7 @@
   {{ title }}
 </h1>
 
-<div class="tokenList">
-  <app-token-list></app-token-list>
-</div>
-<div class="portfolioList">
-  <app-portfolio-list></app-portfolio-list>
+<div class="auctionList">
+  <app-auction-list></app-auction-list>
 </div>
 
