Added home->club->auction hierarchy

--- a/src/app/auction-list/auction-list.component.html
+++ b/src/app/auction-list/auction-list.component.html
@@ -2,7 +2,7 @@
   Top 10 Auctions
 </h2>
 
-<div class="tokenContainer" *ngFor="let auction of Auctions">
+<div class="auctionContainer" *ngFor="let auction of Auctions">
   <div class="name">{{auction.title}}</div>
   <div>
     <img src="{{auction.imageUri}}"/>
