--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,9 @@
 <div class="background"></div>
 
-<h1>
-  {{ title }}
-</h1>
+<div id="logo">
 
-<div class="auctionList">
-  <app-auction-list></app-auction-list>
+  <img src="../../assets/images/gg_small_logo.png"/>
+
 </div>
 
+<app-club-list></app-club-list>
