Added header and club-lots page

--- a/src/app/club-lots/club-lots.component.html
+++ b/src/app/club-lots/club-lots.component.html
@@ -1,11 +1,9 @@
 <div class="background"></div>
 
 <h1>
-  {{ title }}
+  {{ title }} - All Auction Lots
 </h1>
 
 <div class="clubList">
   <app-lot-list clubId="{{clubId}}"></app-lot-list>
-
-  <button routerLink="/club/{{clubId}}/lots">View all auction items</button>
 </div>
