--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,5 @@
 <div class="background"></div>
 
-<div id="logo">
-
-  <img src="../../assets/images/gg_small_logo.png"/>
-
-</div>
+<p class="title">Welcome to Going Gone!</p>
 
 <app-club-list></app-club-list>
