--- a/src/app/club/club.component.css
+++ b/src/app/club/club.component.css
@@ -16,7 +16,16 @@ h1 {
     padding: 8px;
 }
 
-.clubList {
+.lotList {
     width: 100%;
     float: left;
+}
+
+.lotsButtonContainer {
+    margin: 10px auto;
+    text-align: center;
+}
+
+.lotsButton {
+    color: white;
 }
