Basic sidenav on club lots page

--- a/src/app/club-lots/club-lots.component.css
+++ b/src/app/club-lots/club-lots.component.css
@@ -12,11 +12,18 @@
 h1 {
     text-align: center;
     color: white;
-    margin: 10px auto;
+    margin: 0 0 0 200px;
     padding: 8px;
+    background-color: #333;
+    opacity: 0.9;
+    border-radius: 10px;
+    width: auto;
 }
 
-.clubList {
-    width: 100%;
-    float: left;
+.nav {
+    height: 100%;
+}
+
+.lots {
+    margin-left: 200px;
 }
