--- a/src/app/auction-nav/auction-nav.component.html
+++ b/src/app/auction-nav/auction-nav.component.html
@@ -5,7 +5,7 @@
     <li>
       <div>
         <a routerLink="/club/{{clubId}}/lots">
-          All
+          All Items
         </a>
       </div>
     </li>
