--- a/src/app/club-list/club-list.component.html
+++ b/src/app/club-list/club-list.component.html
@@ -3,8 +3,10 @@
 </h2>
 
 <div class="clubContainer" *ngFor="let club of Clubs">
-  <img class="clubLogo" src="{{club.logoUrl}}"/>
   <div class="title">
-    <a routerLink="/club/{{club.clubId}}">{{club.title}}</a>
+    <a routerLink="/club/{{club.clubId}}">
+      <img class="clubLogo" src="{{club.logoUrl}}"/>
+      <div>{{club.title}}</div>
+    </a>
   </div>
 </div>
