--- a/src/app/club/club.component.css
+++ b/src/app/club/club.component.css
@@ -26,6 +26,7 @@ h2 {
 .headerSection {
     height: 300px;
     background-color: rgb(0, 43, 136);
+    margin-bottom: 40px;
 }
 
 .clubLogo {
@@ -37,18 +38,49 @@ h2 {
     height: 160px;
 }
 
-.lotList {
-    width: 100%;
-    float: left;
+.bannerContainer {
+    margin-bottom: 40px;
+}
+
+.banner {
+    padding: 40px 100px;
+    background: center/cover no-repeat #789;
+    min-height: 160px;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+.bannerText {
+    font-size: 30px;
+    background: rgba(0,0,0,0.38);
+    text-transform: uppercase;
+    color: #fff;
+    padding: 0 10px;
+    -webkit-box-decoration-break: clone;
+    -ms-box-decoration-break: clone;
+    -o-box-decoration-break: clone;
+    box-decoration-break: clone;
 }
 
 .lotsButtonContainer {
-    margin: 10px auto;
+    margin-top: 40px;
     text-align: center;
 }
 
 .lotsButton {
-    color: white;
+    width: 100%;
+    text-transform: uppercase;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.introductionContainer {
+    max-width: 900px;
+    margin: 35px auto 0;
+}
+
+.introductionText {
+
 }
 
 .clubDetailsContainer {
@@ -59,18 +91,22 @@ h2 {
 .clubDetailsCard {
     background: white;
     color: black;
-    display: inline-grid;
-    margin: 10px;
-    padding: 10px;
-    width: 360px;
-    height: 100px;
+    margin: 25px auto;
+    padding: 15px;
     text-align: center;
 }
 
-.contactContainer {
-
+.clubDetailsCard label {
+    color: #6f6f6f;
+    font-size: 12px;
+    margin-bottom: 6px;
 }
 
-.websiteContainer {
+.descriptionContainer {
+    max-width: 900px;
+    margin: 35px auto 0;
+}
+
+.descriptionHtml {
 
 }
