--- a/src/app/bid-dialog/bid-dialog.component.html
+++ b/src/app/bid-dialog/bid-dialog.component.html
@@ -5,15 +5,13 @@
     <form #bidForm="ngForm">
         <mat-dialog-content>
             In order to confirm your bid, please enter your details below.
-            <br>
-            <br>
 
             <div class="form-group">
                 <label for="email">Email Address*</label>
                 <input type="email" class="form-control" [(ngModel)]="emailAddress" id="email" name="email" #email="ngModel" required/>
             </div>
 
-            <div *ngIf="email.invalid && (email.dirty || email.touched)">
+            <div class="validationErrorText" *ngIf="email.invalid && (email.dirty || email.touched)">
                 <div *ngIf="email.errors.required">
                     Email Address is required
                 </div>
@@ -27,7 +25,7 @@
         <hr>
         <mat-dialog-actions>
             <button mat-raised-button (click)="onCloseCancel()">CANCEL</button>&nbsp;
-            <button mat-raised-button color="primary" type="submit" (click)="onCloseConfirm()" [disabled]="!bidForm.valid">CONFIRM BID</button>
+            <button mat-raised-button class="confirmButton" type="submit" (click)="onCloseConfirm()" [disabled]="!bidForm.valid">CONFIRM BID</button>
         </mat-dialog-actions>
     </form>
 </div>
