--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -10,7 +10,7 @@
 }
 
 .title {
-    margin: 50px auto;
+    margin: 100px auto 50px;
     text-align: center;
     font-size: 60px;
     color: black;
