--- a/src/app/bid-dialog/bid-dialog.component.html
+++ b/src/app/bid-dialog/bid-dialog.component.html
@@ -8,12 +8,17 @@
 
             <div class="form-group">
                 <label for="email">Email Address*</label>
-                <input type="email" class="form-control" [(ngModel)]="emailAddress" id="email" name="email" #email="ngModel" required/>
+                <input type="email" class="form-control" [(ngModel)]="emailAddress" id="email" name="email" #email="ngModel"
+                       required pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$"/>
             </div>
 
             <div class="validationErrorText" *ngIf="email.invalid && (email.dirty || email.touched)">
                 <div *ngIf="email.errors.required">
-                    Email Address is required
+                    Email address is required
+                </div>
+
+                <div *ngIf="email.errors && email.errors.pattern">
+                    Email address is invalid
                 </div>
             </div>
 
