--- a/src/app/club-list/club-list.component.css
+++ b/src/app/club-list/club-list.component.css
@@ -1,11 +1,12 @@
 h2 {
     text-align: center;
     color: white;
-    margin: 10px 30px;
+    margin: 10px auto;
     padding: 8px;
     background-color: #333;
     opacity: 0.9;
     border-radius: 10px;
+    max-width: 400px;
 }
 
 .clubContainer {
