--- a/src/app/lot-details/lot-details.component.html
+++ b/src/app/lot-details/lot-details.component.html
@@ -40,8 +40,8 @@
         <div class="bidDetailsContainer">
             <div>
                 <label>My bid <span class="minText">(minimum £{{lot.reservePrice}})</span>*</label>
-                <input [(ngModel)]="amount" type="number" placeholder="{{lot.reservePrice}}"/>
-                <button mat-raised-button class="bidButton"
+                <input [(ngModel)]="amount" type="number" placeholder="0"/>
+                <button mat-raised-button class="bidButton" [disabled]="amount < lot.reservePrice"
                         (click)="openBidPopup()">
                     Place Bid
                 </button>
