--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,13 +3,28 @@
   <div class="footer-row">
 
     <div class="footer-email">
-      <p>info@goinggone.io</p>
+      <div>
+        <a href="mailto:info@goinggone.io">
+          <i class="fa fa-envelope"></i>
+          info@goinggone.io
+        </a>
+      </div>
+
+      <div>
+        <a href="http://goinggone.io">
+          <i class="fa fa-globe"></i>
+          www.goinggone.io
+        </a>
+      </div>
     </div>
 
     <div class="footer-logo">
+      <label>Powered by:</label>
       <a routerLink="/home">
-        <img src="../../assets/images/gg_footer_logo.png"/>
+        <img src="../../assets/images/gg_small_logo.png"/>
       </a>
+
+      <p>If you would like to use the Going Gone system at your next event, please don't hesitate to get in touch at info@goinggone.io.</p>
     </div>
 
     <div class="footer-social">
@@ -37,8 +52,20 @@
   </div>
 
   <div class="footer-row">
-    <div class="footer-address">
-      Hayles Bridge Offices, 228 Mulgrave Road, Cheam, Surrey, UK, SM2 6JT
+    <div class="footer-terms">
+      <a routerLink="/terms-and-conditions">
+        Terms &  Conditions
+      </a>
+    </div>
+
+    <div class="footer-version">
+      Version 2.0.0
+    </div>
+
+    <div class="footer-copyright">
+      <div>
+        © Copyright 2018. Going Gone.
+      </div>
     </div>
   </div>
 
