--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
   <div class="logo-container">
-    <a routerLink="/home">
+    <a href="http://goinggone.io">
       <img src="../../assets/images/gg_small_logo.png"/>
     </a>
   </div>
