--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="header">
+<div class="header" [ngStyle]="{ 'background-color': colour }">
   <div class="logo-container">
     <a href="http://goinggone.io">
       <img src="../../assets/images/gg_small_logo.png"/>
