--- a/src/app/club/club.component.html
+++ b/src/app/club/club.component.html
@@ -1,3 +1,5 @@
+<app-header [clubId]="clubId" [colour]="club.primaryColour"></app-header>
+
 <div class="background"></div>
 
 <div fxLayout="column" class="headerSection" [ngStyle]="{ 'background-color': club.primaryColour}">
