Adding placeholders for terms and conditions page and FAQ page, removed /club from the URL structure

--- a/src/app/club-list/club-list.component.html
+++ b/src/app/club-list/club-list.component.html
@@ -4,7 +4,7 @@
 
 <div class="clubContainer" *ngFor="let club of Clubs">
   <div class="title">
-    <a routerLink="/club/{{club.clubId}}">
+    <a routerLink="/{{club.clubId}}">
       <img class="clubLogo" src="{{club.logoUrl}}"/>
       <div>{{club.title}}</div>
     </a>
