--- a/src/app/club/club.component.html
+++ b/src/app/club/club.component.html
@@ -21,7 +21,7 @@
             {{club.bannerText}}
         </div>
         <div class="lotsButtonContainer">
-            <button mat-raised-button class="lotsButton" routerLink="/club/{{clubId}}/lots">
+            <button mat-raised-button class="lotsButton" routerLink="/{{clubId}}/lots">
                 View the auction lots
             </button>
         </div>
