--- a/src/app/lot-details/lot-details.component.html
+++ b/src/app/lot-details/lot-details.component.html
@@ -5,7 +5,7 @@
 <div class="content">
     <div class="titleSection">
         <button mat-raised-button class="backButton"
-                routerLink="/club/{{clubId}}/lots">
+                routerLink="/{{clubId}}/lots">
             << All Lots
         </button>
 
