--- a/src/app/auction-nav/auction-nav.component.html
+++ b/src/app/auction-nav/auction-nav.component.html
@@ -4,7 +4,7 @@
 
     <li>
       <div>
-        <a routerLink="/club/{{clubId}}/lots">
+        <a routerLink="/{{clubId}}/lots">
           All Items
         </a>
       </div>
@@ -12,7 +12,7 @@
 
     <li *ngFor="let tag of tags">
       <div>
-        <a routerLink="/club/{{clubId}}/lots" [queryParams]="{filter: tag}">
+        <a routerLink="/{{clubId}}/lots" [queryParams]="{filter: tag}">
           {{tag}}
         </a>
       </div>
