--- a/src/app/lot-list/lot-list.component.html
+++ b/src/app/lot-list/lot-list.component.html
@@ -31,7 +31,7 @@
 
             <div class="lotsButtonContainer">
                 <button mat-raised-button class="viewButton"
-                        routerLink="/club/{{clubId}}/lot/{{lot.lotId}}">
+                        routerLink="/{{clubId}}/lot/{{lot.lotId}}">
                     View
                 </button>
             </div>
