Renaming club model, schema and collection to organisation

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,13 +7,13 @@
     <div class="quicklinks-container">
         <ul>
             <li>
-                <a routerLink="/{{clubId}}">Home</a>
+                <a routerLink="/{{organisationId}}">Home</a>
             </li>
             <li>
-                <a routerLink="/{{clubId}}/lots">Auction</a>
+                <a routerLink="/{{organisationId}}/lots">Auction</a>
             </li>
             <li>
-                <a routerLink="/{{clubId}}/faq">FAQ</a>
+                <a routerLink="/{{organisationId}}/faq">FAQ</a>
             </li>
         </ul>
     </div>
